@@ -37,6 +37,7 @@ $lang_str['iquest_txt_current_time'] =                  "Aktuální čas";
 $lang_str['iquest_txt_wallet_state'] =                  "Vaše peněženka";
 
 $lang_str['iquest_btn_buy_hint'] =                      "Kup hint!";
+$lang_str['iquest_conf_buy_hint'] =                     "Opravdu si přejete utratit <price> {$lang_str['iquest_txt_coin_symbol']} za další nápovědu?";
 
 $lang_str['iquest_txt_contest_begins_at'] =             "Soutěž začíná <date> v <time>.";
 $lang_str['iquest_txt_time_remaining'] =                "Zbývající čas";
